# kafka_brockers

./: consumer.py  pyproject.toml
.github/workflows/: python.yaml
frameforks/helpers/kafka/consumers/: register_events.py  resgister_events_errors.py
frameforks/helpers/rmq/consumers/: dm_mail_sending.py
frameforks/internal/http/: account.py  mail.py
frameforks/internal/kafka/: consumer.py  producer.py  singleton.py  subscriber.py
frameforks/internal/rmq/: consumer.py  publischer.py
frameforks/tests/: conftest.py  test_registration.py
tests/: conftest.py  test_registration.py
